crates/supersigil-rust/tests/fixtures/fail/malformed_spec_parse_error.stderr
error: supersigil: failed to parse spec files: $DIR/tests/fixtures/malformed-spec-project/specs/broken.mdx: $DIR/tests/fixtures/malformed-spec-project/specs/broken.mdx:12:1: MDX syntax error: Expected a closing tag for `<Criterion>` (3:3)
 --> tests/fixtures/fail/malformed_spec_parse_error.rs:5:1
  |
5 | #[verifies("broken/req#crit-1")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `verifies` (in Nightly builds, run with -Z macro-backtrace for more info)
